# hermes_conversation

./: .gitignore  docker-compose.yml  hacs.json  pyproject.toml  requirements-dev.txt  ruff.toml
.github/workflows/: ci.yml  release.yml
custom_components/hermes_conversation/: __init__.py  config_flow.py  const.py  conversation.py  manifest.json
custom_components/hermes_conversation/translations/: en.json  fr.json
tests/: __init__.py  conftest.py  test_conversation.py
wrapper/: Dockerfile  main.py  requirements.txt
